--- a/CollegePal/app/src/main/res/values/strings.xml
+++ b/CollegePal/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="profile_picture">User\'s profile picture.</string>
     <string name="title_activity_create_course">CreateCourse</string>
     <string name="title_activity_display_course">DisplayCourse</string>
+    <string name="title_activity_student_dashboard">StudentDashboard</string>
+    <string name="title_activity_course">CourseActivity</string>
 </resources>
