--- a/CollegePal/app/src/main/res/values/strings.xml
+++ b/CollegePal/app/src/main/res/values/strings.xml
@@ -21,4 +21,8 @@
     <string name="title_activity_display_course">DisplayCourse</string>
     <string name="title_activity_student_dashboard">StudentDashboard</string>
     <string name="title_activity_course">CourseActivity</string>
+    <string name="title_activity_calendar">CalendarActivity</string>
+
+    <string name="hello">Hello World, SimpleCalendar!</string>
+
 </resources>
