--- a/CollegePal/app/src/main/res/values/strings.xml
+++ b/CollegePal/app/src/main/res/values/strings.xml
@@ -21,4 +21,9 @@
     <string name="title_activity_display_course">DisplayCourse</string>
     <string name="title_activity_student_dashboard">StudentDashboard</string>
     <string name="title_activity_course">CourseActivity</string>
+    <string name="title_activity_update_course">UpdateCourse</string>
+    <string name="title_activity_edit_profile">EditProfile</string>
+    <string name="title_activity_enroll_course">EnrollCourse</string>
+    <string name="title_activity_update_own_course">UpdateOwnCourse</string>
+    <string name="title_activity_course_dash_board">CourseDashBoard</string>
 </resources>
